--- a/preprocess_V2_NLP_mikelakoju/test.ipynb
+++ b/preprocess_V2_NLP_mikelakoju/test.ipynb
@@ -24,93 +24,99 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd \n",
     "import numpy as np\n",
     "import utils"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "abbreviations = json.load(open('data/abbreviations_wordlist.json'))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "source": [
+    "utils._cont_exp('wtf')"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "'wtf'"
+      "text/plain": [
+       "'wtf'"
+      ]
      },
      "metadata": {},
      "execution_count": 6
     }
    ],
-   "source": [
-    "utils._cont_exp('wtf')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import preprocess_kgptalkie as kgp \n"
-   ]
+    "import preprocess_V2_NLP_mikelakoju as pp\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "source": [
+    "pp.cont_exp('wtf')"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "'what the fuck'"
+      "text/plain": [
+       "'what the fuck'"
+      ]
      },
      "metadata": {},
      "execution_count": 2
     }
    ],
-   "source": [
-    "kgp.cont_exp('wtf')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "source": [
+    "pp.remove_dups_char('iiii loveeeeee youuuuuuuuu')"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "'i love you'"
+      "text/plain": [
+       "'i love you'"
+      ]
      },
      "metadata": {},
      "execution_count": 3
     }
    ],
-   "source": [
-    "kgp.remove_dups_char('iiii loveeeeee youuuuuuuuu')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ]
 }
